Added more content, remove ipsom lipsum place holders almost everywhere.

--- a/www/html/index.html
+++ b/www/html/index.html
@@ -33,6 +33,9 @@
 							  <a class="nav-link js-scroll-trigger" href="#about">About</a>
 							</li>
 							<li class="nav-item">
+								<a class="nav-link js-scroll-trigger" href="#getting-started">Getting Started</a>
+							</li>
+							<li class="nav-item">
 							  <a class="nav-link js-scroll-trigger" href="#features">Features</a>
 							</li>
 							<li class="nav-item">
@@ -42,7 +45,7 @@
 							  <a class="nav-link js-scroll-trigger" href="#news">News</a>
 							</li>
 							<li class="nav-item">
-							  <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
+							  <a class="nav-link js-scroll-trigger" href="#community">Join us</a>
 							</li>
 						</ul>
 					</div>
@@ -72,54 +75,65 @@
 				<div class="row">
 					<!-- About text -->
 					<div class="col-lg-6">
-						<!--<p class="fs-1 mb-0 text-first-color">
-							Lorem ipsum dolor sit amet
-						</p>-->
 						<h2 class="mb-10px text-white">About Lunarium</h2>
 						<ul class="list-unstyled mt-30px mb-40px">
 							<li class="mb-10px">
 								<i class="fa fa-chevron-circle-right text-first-color mr-10px"></i>
-								Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+								100% Proof of Stake 3.0 Consensus protocol, allowing very low transaction fees and energy expenditure, and staking rewards to all participants in the network.
 							</li>
 							<li class="mb-10px">
 								<i class="fa fa-chevron-circle-right text-first-color mr-10px"></i>
-								Cras vel metus et felis maximus facilisis id et est.
+								Masternode technology used to secure the network and provide additional features. Each Masternode is secured with collateral of 10,000 XLN.
 							</li>
 							<li class="mb-10px">
 								<i class="fa fa-chevron-circle-right text-first-color mr-10px"></i>
-								Donec facilisis neque sit amet erat molestie sollicitudin.
+								Decentralized blockchain voting utilizing Masternode technology. The blockchain will distribute monthly treasury funds based on successful proposals submitted by the community and voted on by the Masternodes.
 							</li>
 						</ul>
 					</div>
 					<!-- Video -->
           <div class="col-lg-6">
-						<div data-type="youtube" data-video-id="UBufeh1yv2c"></div>
+						<div data-type="youtube" data-video-id="nbmJnCHXaW8"></div>
 					</div>
 				</div>
 
 			</div>
 		</section>
 
-		<section class="py-80px bg-second-color">
+		<section class="py-80px bg-second-color" id="getting-started">
         	<div class="container">
-        		<!-- 3 Big text blocks -->
         		<div class="row">
-        			<div class="col-lg-4 mb-md-30px mb-sm-30px mb-xs-30px">
-        				<p class="fs-1_5 mb-0 text-white">
-        					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas quis augue maximus leo laoreet finibus. In aliquet diam diam, ac pulvinar purus molestie sit amet.
-        				</p>
-        			</div>
-        			<div class="col-lg-4 mb-md-30px mb-sm-30px mb-xs-30px">
-        				<p class="fs-1_5 mb-0 text-white">
-        					Aliquam maximus mi sed semper accumsan. Mauris ullamcorper neque et nisl pulvinar, et aliquet nisl maximus. Curabitur lobortis neque ut sagittis cursus.
-        				</p>
-        			</div>
-        			<div class="col-lg-4 mb-md-30px mb-sm-30px mb-xs-30px">
-        				<p class="fs-1_5 mb-0 text-white">
-        					Maecenas ornare, magna at iaculis lobortis, turpis nibh vulputate elit, a eleifend sapien lacus id nulla. Maecenas convallis sodales nisi, a fringilla augue facilisis eu. Fusce id metus iaculis, vulputate ipsum in, tincidunt dui.
-        				</p>
-        			</div>
-        		</div>
+					<div class="col-lg-12">
+						<div class="heading-st-3 text-center mb-40px"><h2 class="text-white">Getting Started</h2></div>
+					</div>
+
+					<div class="container">
+						<div class="row">
+							<div class="col-lg-4">
+								<div class="step-box bg-gray-100 p-40px text-center rd-5 mb-30px">
+									<i class="fa fa-shopping-basket fs-3 text-first-color d-block mb-20px"></i>
+									<h4 class="text-second-color fw-500 mb-20px">Buy Lunarium</h4>
+									<p class="text-first-color">Buy Lunarium on Crex24. <b><i>Coming Soon!</i></b></p>
+								</div>
+							</div>
+							<div class="col-lg-4">
+								<div class="step-box bg-gray-100 p-40px text-center rd-5 mb-md-30px mb-sm-30px mb-xs-30px">
+									<i class="fa fa-download fs-3 text-first-color d-block mb-20px"></i>
+									<h4 class="text-second-color fw-500 mb-20px">Download the wallet</h4>
+									<p class="text-first-color">Download and install Lunarium wallet for your preferred platform</p>
+								</div>
+							</div>
+							<div class="col-lg-4">
+								<div class="step-box bg-gray-100 p-40px text-center rd-5 mb-md-30px mb-sm-30px mb-xs-30px">
+									<i class="fa fa-cogs fs-3 text-first-color d-block mb-20px"></i>
+									<h4 class="text-second-color fw-500 mb-20px">Setup a Masternode</h4>
+									<p class="text-first-color">Follow the masternode setup guide, or use one easy
+									setup script.</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
         	</div>
         </section>
 
@@ -198,7 +212,8 @@
 						<h3 class="mb-0 text-white">esavard</h3>
 						<span class="text-first-color fs-0_9 text-uppercase">Developer</span>
 						<p class="mb-0 mt-20px">
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris posuere a ipsum in bibendum. Maecenas sem libero Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris posuere a ipsum in bibendum. Maecenas sem libero
+							Senior software developer with more than 20 years of programming experience. He learned to
+							program a long long time ago, when computers with 16K of RAM was a luxury...
 						</p>
 					</div>
 					<div class="col-lg-4 mb-md-30px mb-sm-30px mb-xs-30px">
@@ -206,7 +221,8 @@
 						<h3 class="mb-0 text-white">Jackk</h3>
 						<span class="text-first-color fs-0_9 text-uppercase">Developer & Blockchain advisor</span>
 						<p class="mb-0 mt-20px">
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris posuere a ipsum in bibendum. Maecenas sem libero Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris posuere a ipsum in bibendum. Maecenas sem libero
+							Blockchains are presky little beasts that can be tricky. Our expert is here to make sure Lunarium blockchain is running
+							smoothly.
 						</p>
 					</div>
           <div class="col-lg-4 mb-md-30px mb-sm-30px mb-xs-30px">
@@ -214,7 +230,8 @@
 						<h3 class="mb-0 text-white">HoneyBadger (The Real)</h3>
 						<span class="text-first-color fs-0_9 text-uppercase">Peace Keeper</span>
 						<p class="mb-0 mt-20px">
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris posuere a ipsum in bibendum. Maecenas sem libero Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris posuere a ipsum in bibendum. Maecenas sem libero
+							HoneyBadger is the guardian of our Community, and a determined QA tester. Without the
+							<i>'Badger</i>, it will be more chaotic around here. But don't mess with him...
 						</p>
 					</div>
 					<div class="col-lg-4 mb-md-30px mb-sm-30px mb-xs-30px">
@@ -222,7 +239,8 @@
 						<h3 class="mb-0 text-white">Robine</h3>
 						<span class="text-first-color fs-0_9 text-uppercase">Communication & Grammar Police</span>
 						<p class="mb-0 mt-20px">
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris posuere a ipsum in bibendum. Maecenas sem libero Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris posuere a ipsum in bibendum. Maecenas sem libero
+							If you contact us by email, good chances are that you will interact with Robine. He is
+							Shakespeare reincarnation. We are glad Batman let him join our team.
 						</p>
 					</div>
           <div class="col-lg-4 mb-md-30px mb-sm-30px mb-xs-30px">
@@ -230,7 +248,8 @@
 						<h3 class="mb-0 text-white">Flong</h3>
 						<span class="text-first-color fs-0_9 text-uppercase">Advisor</span>
 						<p class="mb-0 mt-20px">
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris posuere a ipsum in bibendum. Maecenas sem libero Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris posuere a ipsum in bibendum. Maecenas sem libero
+							Flong is our king of staking, and he will help you with your wallet, wherever you decide to
+							run it: Windows, Linux, or even on a Raspberry Pi.
 						</p>
 					</div>
           <div class="col-lg-4 mb-md-30px mb-sm-30px mb-xs-30px">
@@ -238,7 +257,8 @@
 						<h3 class="mb-0 text-white">Roddy</h3>
 						<span class="text-first-color fs-0_9 text-uppercase">Social Media & Community Management</span>
 						<p class="mb-0 mt-20px">
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris posuere a ipsum in bibendum. Maecenas sem libero Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris posuere a ipsum in bibendum. Maecenas sem libero
+							Roddy is our marketing guy, and social media publisher. You can talk with him in English,
+							French or Portuguese, your choice.
 						</p>
 					</div>
 				</div>
@@ -308,43 +328,11 @@
 							</li>
 						</ul>
 					</div>
-					<div class="col-lg-2 mb-md-40px mb-sm-40px mb-xs-40px">
-						<h4 class="text-white mb-40px fw-500">Information</h4>
-						<ul class="list-unstyled p-0 m-0">
-							<li><a href="#" class="text-color mb-20px d-block">Home</a></li>
-							<li><a href="#about" class="text-color mb-20px d-block">About</a></li>
-							<li><a href="#features" class="text-color mb-20px d-block">Features</a></li>
-							<li><a href="#team" class="text-color mb-20px d-block">Team</a></li>
-						</ul>
-					</div>
-					<div class="col-lg-2 mb-md-40px mb-sm-40px mb-xs-40px">
-						<h4 class="text-white mb-40px fw-500">Contact</h4>
-						<ul class="list-unstyled p-0 m-0">
-							<li><a href="#" class="text-color mb-20px d-block">Contact us</a></li>
-						</ul>
-					</div>
 				</div>
            		<div class="row">
-           			<div class="col-lg-12 mt-30px pt-30px brd-thin-solid brd-gray-900 border-right-0 border-left-0 border-bottom-0">
-           				<div class="row">
-           					<div class="col-lg-4 mb-md-40px mb-sm-40px mb-xs-40px">
-           						<span class="fs-0_9">All Rights Reserved 2018 @ The Lunarium Team</span>
-           					</div>
-           					<div class="col-lg-4 text-lg-right text-md-left text-sm-left text-xs-left mb-md-40px mb-sm-40px mb-xs-40px">
-           						<ul class="list-unstyled list-inline m-0 p-0">
-           							<li class="list-inline-item">
-           								<a href="#" class="w-30px h-30px mx-5px d-flex align-items-center justify-content-center bg-facebook rd-100"><i class="fa fa-facebook d-flex text-white fs-0_9"></i></a>
-           							</li>
-           							<li class="list-inline-item">
-           								<a href="#" class="w-30px h-30px mx-5px d-flex align-items-center justify-content-center bg-twitter rd-100"><i class="fa fa-twitter d-flex text-white fs-0_9"></i></a>
-           							</li>
-           							<li class="list-inline-item">
-           								<a href="#" class="w-30px h-30px mx-5px d-flex align-items-center justify-content-center bg-googleplus rd-100"><i class="fa fa-google-plus d-flex text-white fs-0_9"></i></a>
-           							</li>
-           						</ul>
-           					</div>
-           				</div>
-           			</div>
+					<div class="col-lg-4 mb-md-40px mb-sm-40px mb-xs-40px">
+						<span class="fs-0_9">All Rights Reserved 2018 @ The Lunarium Team</span>
+					</div>
            		</div>
             </div>
         </footer>
