Added clickable icons with links to the Getting Started section.

--- a/www/html/index.html
+++ b/www/html/index.html
@@ -111,24 +111,31 @@
 						<div class="row">
 							<div class="col-lg-4">
 								<div class="step-box bg-gray-100 p-40px text-center rd-5 mb-30px">
-									<i class="fa fa-shopping-basket fs-3 text-first-color d-block mb-20px"></i>
 									<h4 class="text-second-color fw-500 mb-20px">Buy Lunarium</h4>
-									<p class="text-first-color">Buy Lunarium on Crex24. <b><i>Coming Soon!</i></b></p>
+									<p class="text-gray-dark">Buy Lunarium on Crex24. <b><i>Coming Soon!</i></b></p>
+									<a class="fa fa-shopping-basket fs-3 text-white btn btn-fill-dark" href="https://crex24.com/exchange/XLN-BTC"></a>
 								</div>
 							</div>
 							<div class="col-lg-4">
 								<div class="step-box bg-gray-100 p-40px text-center rd-5 mb-md-30px mb-sm-30px mb-xs-30px">
-									<i class="fa fa-download fs-3 text-first-color d-block mb-20px"></i>
 									<h4 class="text-second-color fw-500 mb-20px">Download the wallet</h4>
-									<p class="text-first-color">Download and install Lunarium wallet for your preferred platform</p>
+									<p class="text-gray-dark">Download and install Lunarium wallet on your preferred platform</p>
+									<a class="fa fa-download fs-3 text-white btn btn-fill-dark" href="https://github.com/LunariumCoin/lunarium/releases"></a>
 								</div>
 							</div>
 							<div class="col-lg-4">
 								<div class="step-box bg-gray-100 p-40px text-center rd-5 mb-md-30px mb-sm-30px mb-xs-30px">
-									<i class="fa fa-cogs fs-3 text-first-color d-block mb-20px"></i>
 									<h4 class="text-second-color fw-500 mb-20px">Setup a Masternode</h4>
-									<p class="text-first-color">Follow the masternode setup guide, or use one easy
-									setup script.</p>
+									<p class="text-gray-dark">Use the Lunarium Masternode Installation script for easy installation</p>
+									<a class="fa fa-cogs fs-3 text-white btn btn-fill-dark" href="https://github.com/LunariumCoin/Lunarium-MN-Install"></a>
+								</div>
+							</div>
+							<div class="col-lg-4">
+								<div class="step-box bg-gray-100 p-40px text-center rd-5 mb-md-30px mb-sm-30px mb-xs-30px">
+									<h4 class="text-second-color fw-500 mb-20px">Use the Block Explorer</h4>
+									<p class="text-gray-dark">Check a transaction, XLN address, or your Masternode
+										status using Lunarium Explorer</p>
+									<a class="fa fa-heartbeat fs-3 text-white btn btn-fill-dark" href="http://explorer.lunarium.io"></a>
 								</div>
 							</div>
 						</div>
