Corrected some text.

--- a/www/html/index.html
+++ b/www/html/index.html
@@ -126,7 +126,7 @@
                     <div class="col-lg-4">
                         <div class="step-box bg-gray-100 p-40px text-center rd-5 mb-md-30px mb-sm-30px mb-xs-30px">
                             <h4 class="text-second-color fw-500 mb-20px">Download the wallet</h4>
-                            <p class="text-gray-dark">Download and install Lunarium wallet on your preferred
+                            <p class="text-gray-dark">Download and install Lunarium wallet for your preferred
                                 platform</p>
                             <a class="fa fa-download fs-3 text-white btn btn-fill-dark"
                                href="https://github.com/LunariumCoin/lunarium/releases"></a>
