Corrected some text.

--- a/www/html/index.html
+++ b/www/html/index.html
@@ -167,7 +167,7 @@
                 <div class="step-box bg-gray-800 p-40px text-center rd-5 mb-30px">
                     <i class="fa fa-link fs-3 text-first-color d-block mb-20px"></i>
                     <h4 class="text-first-color fw-500 mb-20px">Stable Network</h4>
-                    <p class="text-first-color">Lunarium Masternodes insure the stability of the network.
+                    <p class="text-first-color">Lunarium Masternodes ensure the stability of the network.
                         The Lunarium protocol is developed with stability, and robustness in mind.
                     </p>
                 </div>
@@ -184,8 +184,8 @@
                 <div class="step-box bg-gray-800 p-40px text-center rd-5 mb-md-30px mb-sm-30px mb-xs-30px">
                     <i class="fa fa-bolt fs-3 text-first-color d-block mb-20px"></i>
                     <h4 class="text-first-color fw-500 mb-20px">Fast Transactions</h4>
-                    <p class="text-first-color">The Lunarium blockchain is supported by a groing network of Masternodes,
-                        that garantees that your transactions are processed rapidly.</p>
+                    <p class="text-first-color">The Lunarium blockchain is supported by a growing network of Masternodes,
+                        that guarantees that your transactions are processed rapidly.</p>
                 </div>
             </div>
             <div class="col-lg-4">
@@ -202,8 +202,7 @@
                     <i class="fa fa-trophy fs-3 text-first-color d-block mb-20px"></i>
                     <h4 class="text-first-color fw-500 mb-20px">Best Wallet</h4>
                     <p class="text-first-color">Instead of implementing every features found in other wallets,
-                        we instead choose to go on the stability, and conviviality route. Wallets should always run
-                        flawlessly.
+                        we instead empower users with an easy-to-use, and a stable interface.
                     </p>
                 </div>
             </div>
@@ -212,7 +211,7 @@
                     <i class="fa fa-rocket fs-3 text-first-color d-block mb-20px"></i>
                     <h4 class="text-first-color fw-500 mb-20px">And More to Come!</h4>
                     <p class="text-first-color">This is just the beginning. Keep in touch with us by joining
-                        our welcoming community.</p>
+                        our friendly community.</p>
                 </div>
             </div>
         </div>
@@ -266,7 +265,7 @@
             <div class="col-lg-4 mb-md-30px mb-sm-30px mb-xs-30px">
                 <img src="http://www.placepuppy.net/10p/500/500" alt="" class="mb-30px rd-5">
                 <h3 class="mb-0 text-white">Flong</h3>
-                <span class="text-first-color fs-0_9 text-uppercase">Advisor</span>
+                <span class="text-first-color fs-0_9 text-uppercase">Technical Support & Advisor</span>
                 <p class="mb-0 mt-20px">
                     Flong is our king of staking, and he will help you with your wallet, wherever you decide to
                     run it: Windows, Linux, or even on a Raspberry Pi.
@@ -321,21 +320,16 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-6">
-                <h3 class="text-white">Join the Lunarium Community</h3>
-                <ul class="list-unstyled p-0 m-0">
-                    <li class="d-flex flex-row fs-1_2 mb-30px">
-                        <i class="fa fa-map-marker mr-20px"></i>
-                        Sit amet, consectetur Mauris posuere a ipsum in bibendum.
-                    </li>
-                    <li class="d-flex flex-row fs-1_2 mb-30px">
-                        <i class="fa fa-at mr-20px"></i>
-                        info@goldentemp.com
-                    </li>
-                    <li class="d-flex flex-row fs-1_2 mb-30px">
-                        <i class="fa fa-mobile fs-1_6 mr-20px"></i>
-                        +012 345 6789
-                    </li>
-                </ul>
+                <h3 class="text-white">Join Lunarium Community</h3>
+
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-4 mb-md-30px mb-sm-30px mb-xs-30px">
+                            <a href="#" class="fa fa-facebook fa-2x btn btn-lg btn-fill-light" href="https://www.facebook.com/lunariumcoin"></a>
+                            <a href="#" class="fa fa-twitter fa-2x btn btn-lg btn-fill-light" href="https://twitter.com/lunariumcoin/"></a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
