Typo in icon links, redirected to # instead of Facebook and Twitter.

--- a/www/html/index.html
+++ b/www/html/index.html
@@ -325,8 +325,8 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-4 mb-md-30px mb-sm-30px mb-xs-30px">
-                            <a href="#" class="fa fa-facebook fa-2x btn btn-lg btn-fill-light" href="https://www.facebook.com/lunariumcoin"></a>
-                            <a href="#" class="fa fa-twitter fa-2x btn btn-lg btn-fill-light" href="https://twitter.com/lunariumcoin/"></a>
+                            <a class="fa fa-facebook fa-2x btn btn-lg btn-fill-light" href="https://www.facebook.com/lunariumcoin"></a>
+                            <a class="fa fa-twitter fa-2x btn btn-lg btn-fill-light" href="https://twitter.com/lunariumcoin/"></a>
                         </div>
                     </div>
                 </div>
