Tried to fix the Join us section again. Still work to do...

--- a/www/html/index.html
+++ b/www/html/index.html
@@ -324,9 +324,17 @@
 
                 <div class="container">
                     <div class="row">
-                        <div class="col-lg-4 mb-md-30px mb-sm-30px mb-xs-30px">
-                            <a class="fa fa-facebook fa-2x btn btn-lg btn-fill-light" href="https://www.facebook.com/lunariumcoin"></a>
+                        <div class="col-lg-3 mb-md-30px mb-sm-30px mb-xs-30px">
+                            <a class="fs-0_9 fa-discord btn btn-lg btn-fill-light" href="https://discordapp.com/invite/4nFZeJr">Discord</a>
+                        </div>
+                        <div class="col-lg-3 mb-md-30px mb-sm-30px mb-xs-30px">
+                            <a class="fa fa-github fa-2x btn btn-lg btn-fill-light" href="https://github.com/LunariumCoin"></a>
+                        </div>
+                        <div class="col-lg-3 mb-md-30px mb-sm-30px mb-xs-30px">
                             <a class="fa fa-twitter fa-2x btn btn-lg btn-fill-light" href="https://twitter.com/lunariumcoin/"></a>
+                        </div>
+                        <div class="col-lg-3 mb-md-30px mb-sm-30px mb-xs-30px">
+                            <a class="fa fa-facebook fa-2x btn btn-lg btn-fill-light" href="https://www.facebook.com/lunariumcoin"></a>
                         </div>
                     </div>
                 </div>
