Added Z3ricz to the team panel

--- a/www/html/index.html
+++ b/www/html/index.html
@@ -280,6 +280,16 @@
                     French or Portuguese, your choice.
                 </p>
             </div>
+            <div class="col-lg-4 mb-md-30px mb-sm-30px mb-xs-30px">
+                <img src="http://www.placepuppy.net/5p/500/500" alt="" class="mb-30px rd-5">
+                <h3 class="mb-0 text-white">Z3ricz</h3>
+                <span class="text-first-color fs-0_9 text-uppercase">Technical support & crypto enthusiastic</span>
+                <p class="mb-0 mt-20px">
+                    Do you have a problem with your Masternode, are you wondering what to mine next with your
+                    (power-hungry) mining rigs, or would like  to chat about future crypto investments? Z3ricz is your
+                    best bet.
+                </p>
+            </div>
         </div>
     </div>
 </section>
