--- a/www/html/index.html
+++ b/www/html/index.html
@@ -402,6 +402,14 @@
 <script src="assets/node_modules/retinajs/dist/retina.min.js"></script>
 <!-- Custom js options -->
 <script src="assets/js/minified/custom.min.js"></script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-125131722-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'UA-125131722-1');
+</script>
 </body>
 </html>
