Try to correct security warning about the website when accessing through https.

--- a/www/html/index.html
+++ b/www/html/index.html
@@ -226,16 +226,15 @@
                 <div class="heading-st-3 text-center mb-40px"><h2 class="text-white">The Team</h2></div>
             </div>
             <div class="col-lg-4 mb-md-30px mb-sm-30px mb-xs-30px">
-                <img src="http://www.placepuppy.net/17p/500/500" alt="" class="mb-30px rd-5">
+                <img src="assets/img/esavard.jpeg" alt="" class="mb-30px rd-5">
                 <h3 class="mb-0 text-white">esavard</h3>
                 <span class="text-first-color fs-0_9 text-uppercase">Developer</span>
                 <p class="mb-0 mt-20px">
-                    Senior software developer with more than 20 years of programming experience. He learned to
-                    program a long long time ago, when computers with 16K of RAM was a luxury...
+                    Learned to program a long long time ago, when computers with 16K of RAM was a luxury...
                 </p>
             </div>
             <div class="col-lg-4 mb-md-30px mb-sm-30px mb-xs-30px">
-                <img src="http://www.placepuppy.net/1p/500/500" alt="" class="mb-30px rd-5">
+                <img src="assets/img/jackk.jpeg" alt="" class="mb-30px rd-5">
                 <h3 class="mb-0 text-white">Jackk</h3>
                 <span class="text-first-color fs-0_9 text-uppercase">Developer & Blockchain advisor</span>
                 <p class="mb-0 mt-20px">
@@ -254,7 +253,7 @@
                 </p>
             </div>
             <div class="col-lg-4 mb-md-30px mb-sm-30px mb-xs-30px">
-                <img src="http://www.placepuppy.net/12p/500/500" alt="" class="mb-30px rd-5">
+                <img src="assets/img/robine.jpeg" alt="" class="mb-30px rd-5">
                 <h3 class="mb-0 text-white">Robine</h3>
                 <span class="text-first-color fs-0_9 text-uppercase">Communication & Grammar Police</span>
                 <p class="mb-0 mt-20px">
@@ -263,7 +262,7 @@
                 </p>
             </div>
             <div class="col-lg-4 mb-md-30px mb-sm-30px mb-xs-30px">
-                <img src="http://www.placepuppy.net/10p/500/500" alt="" class="mb-30px rd-5">
+                <img src="assets/img/flong.jpeg" alt="" class="mb-30px rd-5">
                 <h3 class="mb-0 text-white">Flong</h3>
                 <span class="text-first-color fs-0_9 text-uppercase">Technical Support & Advisor</span>
                 <p class="mb-0 mt-20px">
@@ -272,7 +271,7 @@
                 </p>
             </div>
             <div class="col-lg-4 mb-md-30px mb-sm-30px mb-xs-30px">
-                <img src="http://www.placepuppy.net/11p/500/500" alt="" class="mb-30px rd-5">
+                <img src="assets/img/roddy.jpeg" alt="" class="mb-30px rd-5">
                 <h3 class="mb-0 text-white">Roddy</h3>
                 <span class="text-first-color fs-0_9 text-uppercase">Social Media & Community Management</span>
                 <p class="mb-0 mt-20px">
@@ -281,7 +280,7 @@
                 </p>
             </div>
             <div class="col-lg-4 mb-md-30px mb-sm-30px mb-xs-30px">
-                <img src="http://www.placepuppy.net/5p/500/500" alt="" class="mb-30px rd-5">
+                <img src="assets/img/z3ricz.jpeg" alt="" class="mb-30px rd-5">
                 <h3 class="mb-0 text-white">Z3ricz</h3>
                 <span class="text-first-color fs-0_9 text-uppercase">Technical support & crypto enthusiastic</span>
                 <p class="mb-0 mt-20px">
