Updated latest news section: now using Twitter live feed. Edited Crex24 mention (coming soon) since we are now listed.

--- a/www/html/index.html
+++ b/www/html/index.html
@@ -118,7 +118,7 @@
                     <div class="col-lg-4">
                         <div class="step-box bg-gray-100 p-40px text-center rd-5 mb-30px">
                             <h4 class="text-second-color fw-500 mb-20px">Buy Lunarium</h4>
-                            <p class="text-gray-dark">Buy Lunarium on Crex24. <b><i>Coming Soon!</i></b></p>
+                            <p class="text-gray-dark">Buy Lunarium on Crex24!</p>
                             <a class="fa fa-shopping-basket fs-3 text-white btn btn-fill-dark"
                                href="https://crex24.com/exchange/XLN-BTC"></a>
                         </div>
@@ -298,26 +298,10 @@
     <div class="heading-st-3 text-center mb-40px"><h2>Latest News</h2></div>
     <div class="container">
         <div class="row">
-            <div class="col-lg-6 mb-50px">
-                <span class="text-first-color fw-700">August 26th, 2018</span>
-                <h3 class="mb-20px"><a class="text-black" href="#">Swap from Solarium (SLRC) to Lunarium (XLN)
-                    started!</a></h3>
+            <div class="col-lg-12 mb-50px align-content-center">
                 <p>
-                    Hi everyone, we are very happy to announce that the swap from SLRC to XLN has started! Please visit
-                    our Discord Server for the details:
-                    <a href="https://discord.gg/4nFZeJr">https://discord.gg/4nFZeJr</a>
-                </p>
-            </div>
-            <div class="col-lg-6 mb-50px">
-                <span class="text-first-color fw-700">September 1st, 2018</span>
-                <h3 class="mb-20px"><a class="text-black" href="#">SLRC withdraws and deposits disabled on Crex24
-                    exchange</a></h3>
-                <p>
-                    SLRC withdraws and deposits are now disabled on Crex24 exchange. The swap to XLN of Crex24 users
-                    still holding
-                    SLRC will starts in the coming days. The listing of Lunarium (XLN) ticker is in progress. Trading of
-                    XLN should
-                    be starting soon.
+                    <a class="twitter-timeline" data-chrome="transparent noborders noheader nofooter noscrollbar" height="600" width="600" data-theme="light"
+                       href="https://twitter.com/LunariumCoin?ref_src=twsrc%5Etfw">Tweets by LunariumCoin</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                 </p>
             </div>
         </div>
