--- a/www/html/index.html
+++ b/www/html/index.html
@@ -236,6 +236,8 @@
             <div class="col-lg-4 mb-md-30px mb-sm-30px mb-xs-30px">
                 <img src="assets/img/jackk.jpeg" alt="" class="mb-30px rd-5">
                 <h3 class="mb-0 text-white">Jackk</h3>
+                <a class="fa fa-github" href="https://github.com/jackkdev"></a>
+                <br>
                 <span class="text-first-color fs-0_9 text-uppercase">Developer & Blockchain advisor</span>
                 <p class="mb-0 mt-20px">
                     Blockchains are presky little beasts that can be tricky. Our expert is here to make sure Lunarium
