Added esavard picture and links to GitHub and LinkedIn

--- a/www/html/index.html
+++ b/www/html/index.html
@@ -228,6 +228,9 @@
             <div class="col-lg-4 mb-md-30px mb-sm-30px mb-xs-30px">
                 <img src="assets/img/esavard.jpeg" alt="" class="mb-30px rd-5">
                 <h3 class="mb-0 text-white">esavard</h3>
+                <a class="fa fa-github" href="https://github.com/esavard"></a>
+                <a class="fa fa-linkedin" href="https://www.linkedin.com/in/esavard/"></a>
+                <br>
                 <span class="text-first-color fs-0_9 text-uppercase">Developer</span>
                 <p class="mb-0 mt-20px">
                     Learned to program a long long time ago, when computers with 16K of RAM was a luxury...
