Add supported exchanges logos

--- a/www/html/index.html
+++ b/www/html/index.html
@@ -118,9 +118,13 @@
                     <div class="col-lg-4">
                         <div class="step-box bg-gray-100 p-40px text-center rd-5 mb-30px">
                             <h4 class="text-second-color fw-500 mb-20px">Buy Lunarium</h4>
-                            <p class="text-gray-dark">Buy Lunarium on Crex24!</p>
-                            <a class="fa fa-shopping-basket fs-3 text-white btn btn-fill-dark"
-                               href="https://crex24.com/exchange/XLN-BTC"></a>
+                            <p class="text-gray-dark">Buy Lunarium on supported exchanges:</p>
+                            <a href="https://crex24.com/exchange/XLN-BTC">
+                                <img src="assets/img/icon/crex24.png" width="80" height="80"/>
+                            </a>
+                            <a href="https://wallet.escodex.com/market/ESCODEX.XLN_ESCODEX.BTC">
+                            <img src="assets/img/icon/escodex.png" width="80" height="80"/>
+                            </a>
                         </div>
                     </div>
                     <div class="col-lg-4">
